src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply overflow-x-hidden bg-slate-100/80 text-black dark:bg-slate-900 dark:text-white;
  }

  :root {
    @apply overflow-x-hidden;
  }
  .font-outline {
    -webkit-text-stroke: 5px #4ade80;
  }

  .font-outline-2 {
    -webkit-text-stroke: 2px #4ade80;
  }

  .inputs input {
    @apply dark:bg-slate-700/90 dark:border dark:border-slate-500;
  }
}

.animation-delay-1 {
  animation-delay: -1500ms;
}

.animation-delay-2 {
  animation-delay: -2500ms;
}

